<resources>
    <string name="app_name">洁节高</string>
    <string name="login">登录</string>
    <string name="remember_pwd">记住密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="forget">忘记密码</string>
    <string name="login_user_hint">请输入用户名...</string>
    <string name="login_pwd_hint">请输入密码...</string>
    <string name="login_experience">我要体验</string>
    <string name="phone_register">手机注册</string>
    <string name="mine">我的</string>
    <string name="home">首页</string>
    <string name="car">车辆</string>
    <string name="oil">油耗</string>
    <string name="co">碳排</string>
    <string name="register_phone_hint">请输入手机号...</string>
    <string name="register_code_hint">请输入验证码...</string>
    <string name="register_pwd_hint">请设置密码...</string>
    <string name="register_pwd2_hint">再次确认密码...</string>
    <string name="send_code">发送验证码</string>
    <string name="btn_next">下一步</string>
    <string name="location">我的位置</string>
    <string name="tracking">追踪</string>
    <string name="locus">轨迹</string>
    <string name="command">命令</string>
    <string name="street_view">街景</string>
    <string name="rank">排名</string>
    <string name="detail_data">详细数据</string>
    <string name="fuel_of_day">每日百公里油耗(L)</string>
    <string name="fuel_of_week">每周百公里油耗(L)</string>
    <string name="fuel_of_month">每月百公里油耗(L)</string>
    <string name="day_of_date">日期(日)</string>
    <string name="week_of_date">日期(周)</string>
    <string name="month_of_date">日期(月)</string>
    <string name="accelerate">急加速</string>
    <string name="moderate">急减速</string>
    <string name="brake">急刹车</string>
    <string name="turn">急转弯</string>
    <string name="average_fuel">平均油耗</string>
    <string name="average_speed">平均速度</string>
    <string name="fuel_spend">耗油量</string>
    <string name="drive_time">行驶时间</string>
    <string name="reference_money">参考油费</string>
    <string name="reset">重置</string>
    <string name="track_record">轨迹记录</string>
    <string name="load_all_record">已加载全部记录</string>
    <string name="my_car">我的车辆</string>
    <string name="my_report">我的报告</string>
    <string name="normal_question">常见问题</string>
    <string name="alter_pwd">修改密码</string>
    <string name="about_app">关于APP</string>
    <string name="about">关于</string>
    <string name="feedback">意见反馈</string>
    <string name="time">时间</string>
    <string name="personal_profile">个人资料</string>
    <string name="icon">头像</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="tel">联系电话</string>
    <string name="add">家庭住址</string>
    <string name="add_car">添加车辆</string>
    <string name="car_num">车牌号</string>
    <string name="car_brand">车辆品牌</string>
    <string name="car_type">车型</string>
    <string name="model_year">年款</string>
    <string name="gear_case">变速箱</string>
    <string name="displacement">排量</string>
    <string name="cur_km">当前仪表盘里程数</string>
    <string name="hint_input_car_num">请输入车辆完整车牌号...</string>
    <string name="hint_input_carriage_num">请输入车架号...</string>
    <string name="hint_input_IMEI_num">请填写设备IMEI号...</string>
    <string name="hint_input_car_km">请输入里程数...</string>
    <string name="carriage_num">车架号（VIN码）</string>
    <string name="device_num">设备号（IMEI号）</string>
    <string name="carriage_instruction">  车架号（车辆识别VIN）一般在挡风玻璃的左上角或右下角，或在车辆行驶中查找...</string>
    <string name="submit">确定</string>
    <string name="base_info">基本信息</string>
    <string name="loading">数据加载中. . . 请等待</string>
    <string name="waring_internet_error">网络连接失败</string>
    <string name="login_succ">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="user_empty">用户名不存在</string>
    <string name="name_or_pwd_error">用户名或密码错误</string>
    <string name="exe_error">程序报错</string>
    <string name="key_error">key值不匹配</string>
    <string name="network_unable">当前网络不可用</string>
    <string name="mobile_unable">手机网络不可用</string>
    <string name="input_empty">输入框不能为空</string>
    <string name="register">注册</string>
    <string name="send_failed">发送失败</string>
    <string name="send_succ">发送成功</string>
    <string name="over_limit">超过限制</string>
    <string name="sms_send_frequency">短信发送频率过快</string>
    <string name="pwd_not_same">密码输入不一致</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="code_over_time">验证码已过期</string>
    <string name="code_error">验证码错误</string>
    <string name="register_succ">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="alter_succ">恭喜您！修改成功</string>
    <string name="congratulation_succ">恭喜您！注册成功！</string>
    <string name="login_at_once">立即登录</string>
    <string name="user_existed">手机号已注册</string>
    <string name="select_car">选择车辆</string>
    <string name="select_car_brand">选择车辆品牌</string>
    <string name="select_car_model">选择车型</string>
    <string name="select_car_year">选择年款</string>
    <string name="cancel">取消</string>
    <string name="complete_info">请完善车辆资料</string>
    <string name="sn_exist">设备号已经存在</string>
    <string name="car_exist">车牌号已经存在</string>
    <string name="sn_not_exist">设备号不存在</string>
    <string name="sn_has_add">设备号已经添加</string>
    <string name="add_succ">添加成功</string>
    <string name="add_failed">添加失败</string>
    <string name="add_same">重复添加</string>
    <string name="status">状态：</string>
    <string name="locate">定位：</string>
    <string name="direct">方向：</string>
    <string name="speed">速度：</string>
    <string name="power">电量：</string>
    <string name="address">地址：</string>
    <string name="voltage">电压：</string>
    <string name="unable">未启用</string>
    <string name="sport">运动</string>
    <string name="quiet">静止</string>
    <string name="offline">离线</string>
    <string name="arrears">欠费</string>
    <string name="base_station">基站</string>
    <string name="gps">GPS</string>
    <string name="wifi">WIFI</string>
    <string name="course_N">正北</string>
    <string name="course_EN">东北</string>
    <string name="course_E">正东</string>
    <string name="course_ES">东南</string>
    <string name="course_S">正南</string>
    <string name="course_WS">西南</string>
    <string name="course_W">正西</string>
    <string name="course_WN">西北</string>
    <string name="no_msg">没有查询到相关数据</string>
    <string name="start_point">起点</string>
    <string name="end_point">终点</string>
    <string name="stop">停留</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="refuse_enter">访问被拒绝！</string>
    <string name="waring">注意</string>
    <string name="waring_start_time_is_after_end">开始时间比结束时间更大</string>
    <string name="end_time_before_start_time">结束时间不能小于开始时间</string>
    <string name="waring_time">请搜索一天范围内的历史轨迹</string>
    <string name="confirm">确认</string>
    <string name="current_oil_price">实时油价</string>
    <string name="oil_price">油价</string>
    <string name="yuan_l">元/升</string>
    <string name="yuan">元</string>
    <string name="input_oil">请输入油价</string>
    <string name="update_succ">修改成功</string>
    <string name="update_failed">修改失败</string>
    <string name="phone_number">手机号：</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="input_name">请输入名字</string>
    <string name="select_sex">请选择性别</string>
    <string name="input_tel">请输入联系电话</string>
    <string name="input_add">请输入家庭住址</string>
    <string name="birth">生日</string>
    <string name="install_navi_first">请先安装导航APP</string>
    <string name="select_before">请选择今天之前的日期</string>
    <string name="checkCar">汽车体检</string>
    <string name="checking">正在检测，请稍候...</string>
    <string name="check_succ">检测完成...</string>
    <string name="this_week">本周</string>
    <string name="last_week">上周</string>
    <string name="l_last_week">上上周</string>
    <string name="ll_last_week">上上上周</string>
    <string name="month">月</string>
    <string name="no_data">没有数据</string>
    <string name="coefficient">系数</string>
    <string name="alarm_msg">报警消息</string>
    <string name="promote">提示</string>
    <string name="del_msg">你确定要删除这条报警信息吗？</string>
    <string name="del_succ">删除成功</string>
    <string name="del_failed">删除失败</string>
    <string name="sure_exit">你确定要退出洁节高吗？</string>
    <string name="app_code">版本号：</string>
    <string name="company_name">北京华益蓝天环保科技有限责任公司</string>
    <string name="desc">\u3000\u3000此版本适用于Android4.5及4.5以上版本手机，软件的下载及使用过程中产生的流量费，由运营商收取。</string>
    <string name="feedback_qq">反馈QQ</string>
    <string name="feedback_tel">反馈电话</string>
    <string name="oil_spend">油耗量(L)</string>
    <string name="day_ref_oil_feed">本日参考油费(元)</string>
    <string name="week_ref_oil_feed">本周参考油费(元)</string>
    <string name="month_ref_oil_feed">本月参考油费(元)</string>
    <string name="ave_oil">平均油耗(L)</string>
    <string name="ave_co">平均碳排放(g)</string>
    <string name="dis">里程</string>
    <string name="day_data">日数据</string>
    <string name="week_data">周数据</string>
    <string name="month_data">月数据</string>
    <string name="beyond_date">你选择的查询时间已经超过当前时间范围</string>
    <string name="hint_original_pwd">请输入旧密码...</string>
    <string name="submit_alter">确认修改</string>
    <string name="add_device_first">请先添加设备</string>
    <string name="exit">退出</string>
    <string name="baidu">百度</string>
    <string name="gaode">高德</string>
    <string name="google">谷歌</string>
    <string name="baidu_map">百度地图</string>
    <string name="gaode_map">高德地图</string>
    <string name="google_map">谷歌地图</string>
    <string name="no_adaptation_google">当前系统不适配谷歌地图</string>
    <string name="newPsWd">请设置新密码...</string>
    <string name="oldPswError">旧密码错误</string>
    <string name="noUser">用户不存在</string>
    <string name="homeLeft">您当前的油耗排名击败全国</string>
    <string name="homeRight">的车主!</string>
    <string name="connect_overtime">连接超时！</string>
    <string name="location_dialog">请设置定位权限，否则无法精确定位您的位置</string>
    <string name="cant_get_data">您还未激活服务，所以无法获得实时数据</string>
    <string name="check_locate_permission">定位不到您的位置，请确保定位权限已经打开</string>
    <string name="electric_fence">电子栅栏</string>
    <string name="history_traces">历史轨迹</string>
    <string name="beyoardNow">您选择的时间超过今天</string>
    <string name="beyoardNowMonth">您选择的时间超过本月</string>
    <string name="add_ele">添加</string>
    <string name="add_electric_fence">添加电子栅栏</string>
    <string name="edit_electric_fence">编辑电子围栏</string>
    <string name="fence_name">名称</string>
    <string name="refer">提交</string>
    <string name="lat">经度</string>
    <string name="lng">纬度</string>
    <string name="radius">半径</string>
    <string name="setting">设置</string>
    <string name="msg_setting">消息设置</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="series_number">序列号</string>
    <string name="wifi_hotspot">WIFI热点</string>
    <string name="reset_wifi">重置WIFI名称密码</string>
    <string name="set_wifi">设置WIFI名称密码</string>
    <string name="sure_reset_wifi">确定要重置WIFI名称和密码吗？</string>
    <string name="set_wifi_name">请设置WIFI名称</string>
    <string name="set_wifi_pwd">请设置WIFI密码</string>
    <string name="voice">声音</string>
    <string name="vibrate">震动</string>
    <string name="take_over_msg">接收新消息通知</string>
    <string name="name_empty">请输入围栏名称</string>
    <string name="point_empty">请选择中心点</string>
    <string name="radius_empty">请输入围栏半径</string>
    <string name="point_error">中心点纬度输入错误</string>
    <string name="radius_error_100">围栏半径不能小于100米</string>
    <string name="radius_error">围栏半径输入错误</string>
    <string name="saveSucess">保存成功</string>
    <string name="savefailed">保存失败</string>
    <string name="sure_to_delete">你确定要删除这项吗?</string>
    <string name="deleteSuccess">删除成功</string>
    <string name="deleteFailed">删除失败</string>
    <string name="deleteElectronic">删除电子围栏</string>
    <string name="device_notexist">设备不存在</string>
    <string name="device_offline">设备不在线</string>
    <string name="command_send_failed">有异常</string>
    <string name="commandsave">指令已经保存</string>
</resources>