<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <include layout="@layout/layout_actionbar" />

    <EditText
        android:id="@+id/et_phone"
        style="@style/EditTextStyle"
        android:hint="@string/register_phone_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/id_login_normal">

        <EditText
            android:id="@+id/et_code"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/register_code_hint" />

        <TextView
            android:id="@+id/tv_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/send_code"
            android:textColor="@color/btn_blue"
            android:textSize="16sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_pwd"
        style="@style/EditTextStyle"
        android:hint="@string/register_pwd_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/et_pwd2"
        style="@style/EditTextStyle"
        android:hint="@string/register_pwd2_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_next"
        style="@style/ButtonStyle"
        android:layout_marginTop="30dp"
        android:text="@string/register" />

</LinearLayout>